# GESCO

./: .dockerignore  .env.example  .gitignore  ARBORESCENCE.md  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/versions/: d31e5e243613_initial.py
app/: config.py  main.py
app/core/: database.py  dependencies.py  exceptions.py  security.py  service_base.py
app/domain/: __init__.py  exceptions.py
app/modules/achats/: __init__.py  models.py  router.py  schemas.py
app/modules/auth/: router.py  schemas.py  service.py
app/modules/catalogue/: models.py  router.py  schemas.py
app/modules/commercial/: models.py  router.py  schemas.py
app/modules/comptabilite/: __init__.py  models.py  router.py  schemas.py
app/modules/immobilisations/: __init__.py  models.py  router.py  schemas.py
app/modules/paie/: __init__.py  models.py  router.py  schemas.py
app/modules/parametrage/: __init__.py  dependencies.py  models.py  router.py  schemas.py
app/modules/partenaires/: models.py  router.py  schemas.py
app/modules/rapports/: __init__.py  router.py  schemas.py
app/modules/rh/: models.py  router.py  schemas.py
app/modules/stock/: __init__.py  models.py  router.py  schemas.py
app/shared/: regulations.py
backend/: .env.example  INSTALL_WINDOWS.md  README.md  activate_venv.bat  docker-compose.yml  gesco.spec  pyproject.toml  requirements.txt  run_server.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py  py.typed
backend/docs/: CORRECTIONS_ET_PLAN.md  MODULES_ET_FONCTIONNALITES.md  MODULES_PRIORITES.md
backend/scripts/: Lancer_Gesco.bat  build_windows.ps1  install_demarrage_auto.ps1  seed_data.py  update_passwords.py
backend/tests/: conftest.py
frontend/: .env.example  AUDIT-BACKEND-FRONTEND.md  components.d.ts  env.d.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
scripts/: seed_data.py
tests/api/: test_factures.py
(+572 files in other folders)
